# src/views/oauth/oauth.py
@@ -4,6 +4,7 @@ from http import HTTPStatus
 
 import requests as rq
 from flask import Blueprint, jsonify, request
+from flask_jwt_extended import jwt_required
 
 from settings import OAUTH_PROVIDERS
 from utils.models import OAuthProviderSet, UserSet, ProfileSet
@@ -13,7 +14,7 @@ from utils.tools import (
     get_user_tokens,
     do_checkout,
     register_user_data,
-    show_error, sign, update_profile, create_social, is_social_exist, get_user_by_id
+    show_error, sign, update_profile, create_social, is_social_exist, get_user_by_id, user_sets, remove_user_social
 )
 
 oauth = Blueprint('OAuth', __name__)
@@ -34,11 +35,18 @@ def check_request(result):
 
 
 def provider_get_tokens(provider: OAuthProviderSet):
+    """
+    Получение authorization токена по без call_back url (режим устройства)
+    1) Возвращает ссылку к провайдеру, для получения разрешения на доступ к ресурсам пользователя
+    2) Обменивает код доступа, на access token
+    """
     if provider.oauth_provider not in OAUTH_PROVIDERS.keys():
         return show_error('Такой провайдер OAuth не поддерживается!', HTTPStatus.UNPROCESSABLE_ENTITY)
     prov_sets = OAUTH_PROVIDERS[provider.oauth_provider]
+
     provider.client_id = prov_sets.get('client_id')
     provider.client_secret = prov_sets.get('client_secret')
+
     if not provider.request_code:
         return show_error(f'{prov_sets.get("request_code_url")}{provider.client_id}', HTTPStatus.TEMPORARY_REDIRECT)
 
@@ -48,6 +56,7 @@ def provider_get_tokens(provider: OAuthProviderSet):
         'client_id': provider.client_id,
         'client_secret': provider.client_secret
     }
+
     headers = {'Content-type': 'application/x-www-form-urlencoded'}
     res = rq.post(url=prov_sets.get('get_access_token_url'), data=payload, headers=headers)
     return check_request(res)
@@ -86,10 +95,9 @@ def login():
     candidate_raw, profile_raw = provider_get_userinfo(provider)
     social = is_social_exist(social_id=profile_raw['social_id'], social_name=provider.oauth_provider)
     if not social:
-        return jsonify({'msg': 'Пользователь не зарегистрированы!'}), HTTPStatus.NOT_FOUND
+        return jsonify({'msg': 'Пользователь не зарегистрирован!'}), HTTPStatus.NOT_FOUND
 
     db_user = get_user_by_id(user_id=social.user_id)
-
     access_token, refresh_token = get_user_tokens(db_user)
     do_checkout(db_user, info=str(request.user_agent), refresh_token=refresh_token)
     return jsonify(access_token=access_token, refresh_token=refresh_token)
@@ -121,3 +129,27 @@ def registration():
     update_profile(profile, user)
     return {'msg': f'Вы зарегистрировались через OAuth ({provider.oauth_provider})! Ваш логин:'
                    f' {candidate.login}, ваш пароль: {candidate.password}'}, HTTPStatus.CREATED
+
+
+@oauth.route('remove/<string:social>', methods=['DELETE'])
+@jwt_required()
+def remove(social):
+    """
+    Открепить связь социальной сети и аккаунта пользователя
+    'vk', 'yandex' или другие зарегистрированные провайдеры в OAUTH_PROVIDERS
+    'all' - отключение всех провайдеров.
+    """
+
+    user, _ = user_sets()
+
+    if social == 'all':
+        remove_user_social(user=user, social=social, complete=True)
+        return {'msg': f'Все OAuth Login удалены для пользователя {user.login}'}
+
+    if social not in OAUTH_PROVIDERS.keys():
+        return show_error('Такой провайдер OAuth не поддерживается!', HTTPStatus.UNPROCESSABLE_ENTITY)
+    remove_user_social(user=user, social=social)
+    return {'msg': f'Логин через {social} удален для пользователя {user.login}'}
+
+
+
